--- a/auto-column-fill-layout/index.html
+++ b/auto-column-fill-layout/index.html
@@ -5,79 +5,150 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>2칼럼 레이아웃</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="auto-column.css">
 </head>
 
 <body>
-	<h1>2칼럼 레이아웃 (한 칼럼 높이 기준으로 자동 넘김)</h1>
-	<!-- JavaScript로 동적으로 p 태그가 생성됩니다 -->
 	<div class="container">
-		<p>내용 1: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel placerat ligula.</p>
-		<p>내용 2: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
-			ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
-			sodales. Sed vel placerat ligula.</p>
-		<p>내용 3: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
-			ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
-			sodales. Sed vel placerat ligula.</p>
-		<p>내용 4: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
-			ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
-			sodales. Sed vel placerat ligula.</p>
-		<p>내용 5: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
-			ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
-			sodales. Sed vel placerat ligula.</p>
-		<p>내용 6: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
-			ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit olor sit amet,
-			consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante ipsum primis in faucibus orci
-			luctus et ultrices posuere cubilia curae; Donec eget velit olor sit amet, consectetur adipiscing elit.
-			Curabitur vitae lectus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
-			cubilia curae; Donec eget velit a eget velit olor sit amet, consectetur adipiscing elit. Curabitur vitae
-			lectus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec
-			eget velit a eget velit olor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum
-			ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a eget velit
-			olor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante ipsum primis in
-			faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat sodales. Sed vel
-			placerat ligula.</p>
-		<p>내용 7: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
-			ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
-			sodales. Sed vel placerat ligula.</p>
-		<p>내용 8: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
-			ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
-			sodales. Sed vel placerat ligula.</p>
-		<p>내용 9: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
-			ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
-			sodales. Sed vel placerat ligula.</p>
-		<p>내용 10: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
-			ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
-			sodales. Sed vel placerat ligula.</p>
-		<p>내용 11: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
-			ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
-			sodales. Sed vel placerat ligula.</p>
-		<p>내용 12: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
-			ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
-			sodales. Sed vel placerat ligula.</p>
-		<p>내용 13: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
-			ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
-			sodales. Sed vel placerat ligula.</p>
-		<p>내용 14: Lorem ipsum dolor sit amet, consectetur adipiscing elit.osuere cubilia curae; Donec eget velit a magna
-			volutpat sodales. Sed vel placerat ligula.</p>
-		<p>내용 15: Lorem ipsum dolor sit amet, consectetur adipiscing elit.osuere cubilia curae; Donec eget velit a magna
-			volutpat sodales. Sed vel placerat ligula.</p>
-		<p>내용 16: Lorem ipsum dolor sit amet, consectetur adipiscing elit.osuere cubilia curae; Donec eget velit a magna
-			volutpat sodales. Sed vel placerat ligula.</p>
-		<p>내용 17: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
-			ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
-			sodales. Sed vel placerat ligula.</p>
-		<p>내용 18: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
-			ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
-			sodales. Sed vel placerat ligula.</p>
-		<p>내용 19: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-		<p>내용 20: Curabitur vitae lectus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.</p>
-		<p>내용 21: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
-			ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
-			sodales. Sed vel placerat ligula.</p>
-		<p>내용 22: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
-			ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
-			sodales. Sed vel placerat ligula.</p>
+		<div class="title-box">
+			<h1>2칼럼 레이아웃 (한 칼럼 높이 기준으로 자동 넘김)</h1>
+			<button class="btn btn-warning" onclick="window.print();">
+				<i class="fas fa-print"></i> 인쇄 테스트
+			</button>
+		</div>
+		
+		<div class="list">
+			<div class="item">
+				<h3>내용 1: </h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 2: </h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
+				ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
+				sodales. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 3: </h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
+				ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
+				sodales. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 4: </h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
+				ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
+				sodales. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 5: </h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
+				ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
+				sodales. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 6: </h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
+				ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit olor sit amet,
+				consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante ipsum primis in faucibus orci
+				luctus et ultrices posuere cubilia curae; Donec eget velit olor sit amet, consectetur adipiscing elit.
+				Curabitur vitae lectus velit. Donec eget velit a eget velit olor sit amet, consectetur adipiscing elit. Vestibulum
+				ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a eget velit
+				olor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante ipsum primis in
+				faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat sodales. Sed vel
+				placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 7: </h3>
+				<p>Donec eget velit a magna volutpat
+				sodales. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 8: </h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
+				ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
+				sodales. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 9: </h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
+				ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
+				sodales. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 10:</h3>
+				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
+				ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
+				sodales. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 11:</h3>
+				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
+				ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
+				sodales. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 12:</h3>
+				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
+				ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
+				sodales. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 13: </h3>
+				<p> ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
+				ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
+				sodales. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 14: </h3>
+				<p> ipsum dolor sit amet, consectetur adipiscing elit.osuere cubilia curae; Donec eget velit a magna
+				volutpat sodales. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 15: </h3>
+				<p> ipsum dolor sit amet, consectetur adipiscing elit.osuere cubilia curae; Donec eget velit a magna
+				volutpat sodales. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 16: </h3>
+				<p> ipsum dolor sit amet, consectetur adipiscing elit.osuere cubilia curae; Donec eget velit a magna
+				volutpat sodales. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 17: </h3>
+				<p> ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
+				ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
+				sodales. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 18: </h3>
+				<p> ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
+				ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
+				sodales. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 19: </h3>
+				<p> ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			</div>
+			<div class="item">
+				<h3>내용 20: </h3>
+				<p>Curabitur vitae lectus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.</p>
+			</div>
+			<div class="item">
+				<h3>내용 21: </h3>
+				<p> ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
+				ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
+				sodales. Sed vel placerat ligula.</p>
+			</div>
+			<div class="item">
+				<h3>내용 22: </h3>
+				<p> ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae lectus velit. Vestibulum ante
+				ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec eget velit a magna volutpat
+				sodales. Sed vel placerat ligula.</p>
+			</div>
+		</div>
 	</div>
 </body>
 
